--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -387,7 +387,7 @@ However, these metrics do not tell the full story. For example, a high $R^2$ can
 
 ::: {#tbl-reg-quality-matrics .table}
 | Metric | What It Tells You | What to Look For |
-|-------------------|-----------------------------|------------------------|
+|------------------------|------------------------|------------------------|
 | RSE (Residual Std. Error) | Average prediction error | Lower is better |
 | $R^2$ | Proportion of variance explained | Higher is better |
 | Adjusted $R^2$ | $R^2$ adjusted for number of predictors | Higher (but realistic) is better |
@@ -604,9 +604,7 @@ In the next subsection, we bring logistic regression to life in R using the *chu
 
 ### Fitting a Logistic Regression Model in R {.unnumbered}
 
-Let us now implement logistic regression in R and interpret its results in a real-world context. The *churn* dataset from the **liver** package (previously introduced in Section [-@sec-ch7-knn-churn] as a case study for the kNN algorithm) captures key aspects of customer behavior, including account length, plan types, usage metrics, and customer service interactions. The goal remains the same: to predict whether a customer has churned (`yes`) or not (`no`) based on these features.
-
-For background on the dataset and exploratory analysis, see Section [-@sec-ch4-EDA-churn]. We first inspect the structure of the data:
+Let us now implement logistic regression in R and interpret its results in a real-world context. The *churn* dataset from the **liver** package captures key aspects of customer behavior, including account length, plan types, usage metrics, and customer service interactions. The goal remains the same: to predict whether a customer has churned (`yes`) or not (`no`) based on these features. For background on the dataset see [https://cran.r-project.org/web/packages/liver/refman/liver.html#churn](https://cran.r-project.org/web/packages/liver/refman/liver.html#churn). We first inspect the structure of the data:
 
 ```{r}
 data(churn)
@@ -994,11 +992,7 @@ Each model represents a distinct approach to classification. Logistic regression
 
 > *Guiding Questions:* How do these models differ in how they handle decision boundaries and uncertainty? Which one do you think will perform best, and why?
 
-Our goal is to compare these models using ROC curves and AUC, which offer threshold-independent measures of classification performance, as discussed in Chapter [-@sec-ch8-evaluation]. To ensure a fair comparison, we use the same set of features and preprocessing steps for all three models.
-
-The selected features, motivated by our earlier exploration in Section [-@sec-ch4-EDA-churn], include: `account.length`, `voice.plan`, `voice.messages`, `intl.plan`, `intl.mins`, `intl.calls`, `day.mins`, `day.calls`, `eve.mins`, `eve.calls`, `night.mins`, `night.calls`, and `customer.calls`.
-
-These features capture core aspects of a customer’s usage behavior and plan characteristics, making them informative for modeling churn.
+Our goal is to compare these models using ROC curves and AUC, which offer threshold-independent measures of classification performance, as discussed in Chapter [-@sec-ch8-evaluation]. To ensure a fair comparison, we use the same set of features and preprocessing steps for all three models. The selected features include: `account.length`, `voice.plan`, `voice.messages`, `intl.plan`, `intl.mins`, `intl.calls`, `day.mins`, `day.calls`, `eve.mins`, `eve.calls`, `night.mins`, `night.calls`, and `customer.calls`. These features capture core aspects of a customer’s usage behavior and plan characteristics, making them informative for modeling churn.
 
 We define the modeling formula used across all three classifiers:
 
