--- a/packages.bib
+++ b/packages.bib
@@ -112,10 +112,10 @@
 }
 
 @Manual{R-liver,
-  title = {liver: Foundations Toolkit and Datasets for Data Science},
+  title = {liver: Toolkit and Datasets for Data Science},
   author = {Reza Mohammadi and Kevin Burke},
   year = {2025},
-  note = {R package version 1.24},
+  note = {R package version 1.25},
   url = {https://book-data-science-r.netlify.app},
 }
 
